# MaverickJB

./: App.jsx  README.md  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  PlayerModule.cpp
android/app/src/main/java/com/maverickjb/: MainActivity.kt  MainApplication.kt  PlayerModule.java  PlayerPackage.kt
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/MaverickJB/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/MaverickJB.xcodeproj/: project.pbxproj
ios/MaverickJB.xcodeproj/xcshareddata/xcschemes/: MaverickJB.xcscheme
ios/MaverickJBTests/: MaverickJBTests.m
src/components/: ControlButton.js  Player.js  SongItem.js  SongList.js
src/components/ReusableComponents/: ControlModal.js  IncrementButtonGroup.js  MiniPlayer.js  PermissionWrapper.js  PlayerControls.js  SongItem.js  ToggleButtons.js
src/components/pages/: Player.js  SongList.js
src/components/utils/: constants.js  helper.js  playerSliceUtils.js  soundInstance.js  usePlayingAnimation.js  useSwipeDownToGoBack.js
src/store/: store.js
src/store/slices/: abRepeatControls.js  controlsSlice.js  playerSlice.js  songsSlice.js  soundManager.js
